--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,6 +1,6 @@
 {
   "robotWidth": 0.8128,
-  "robotLength": 0.813,
+  "robotLength": 0.8128,
   "holonomicMode": true,
   "pathFolders": [],
   "autoFolders": [],
@@ -9,23 +9,23 @@
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 74.088,
-  "robotMOI": 6.883,
+  "robotMass": 56.699,
+  "robotMOI": 5.9962006065,
   "robotTrackwidth": 0.546,
   "driveWheelRadius": 0.095,
-  "driveGearing": 5.143,
-  "maxDriveSpeed": 5.45,
+  "driveGearing": 6.75,
+  "maxDriveSpeed": 50.0,
   "driveMotorType": "vortex",
-  "driveCurrentLimit": 60.0,
+  "driveCurrentLimit": 70.0,
   "wheelCOF": 1.2,
-  "flModuleX": 0.273,
-  "flModuleY": 0.273,
-  "frModuleX": 0.273,
-  "frModuleY": -0.273,
-  "blModuleX": -0.273,
-  "blModuleY": 0.273,
-  "brModuleX": -0.273,
-  "brModuleY": -0.273,
+  "flModuleX": 0.244,
+  "flModuleY": 0.244,
+  "frModuleX": 0.244,
+  "frModuleY": -0.244,
+  "blModuleX": -0.244,
+  "blModuleY": 0.244,
+  "brModuleX": -0.244,
+  "brModuleY": -0.244,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": []
